--- a/handlebars/documentation/.dataobjects/core-dataobjects.adoc
+++ b/handlebars/documentation/.dataobjects/core-dataobjects.adoc
@@ -21,6 +21,14 @@ Set the algorithm used to build a hash from the handlebars snippet.
 +++
 Set the size of the cache. After reaching the max size, new elements will replace the oldest one.
 +++
-|[[endDelimiter]]`endDelimiter`|`String`|-
-|[[startDelimiter]]`startDelimiter`|`String`|-
+|[[endDelimiter]]`endDelimiter`|`String`|
++++
+Set the end delimiter for the Handlebars engine to recognize en of placeholders.
+ By default, the Handlebars engine uses `}}` symbols as end delimiter.
++++
+|[[startDelimiter]]`startDelimiter`|`String`|
++++
+Set the start delimiter for the Handlebars engine to recognize start of placeholders.
+ By default, the Handlebars engine uses `{{` symbols as start delimiter.
++++
 |===
