--- a/core/docs/asciidoc/dataobjects.adoc
+++ b/core/docs/asciidoc/dataobjects.adoc
@@ -1,3 +1,5 @@
+= Cheatsheets
+
 [[TemplateEngineEntry]]
 == TemplateEngineEntry
 
@@ -6,21 +8,20 @@
 ++++
 '''
 
-[cols=">25%,^25%,50%"]
+[cols=">25%,25%,50%"]
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
-|[[config]]`config`|`Json object`|
-+++
+|[[config]]`@config`|`Json object`|+++
 Sets link implementation configuration.
 +++
-|[[name]]`name`|`String`|
-+++
+|[[name]]`@name`|`String`|+++
 Sets the template engine name that identifies this strategy. This name must be exactly
  the same as the TemplateEngineFactory returns. The name is later used in the Fragment Content
  to define which template engine should process it. Must be unique.
 +++
 |===
+
 [[TemplateEngineKnotOptions]]
 == TemplateEngineKnotOptions
 
@@ -29,21 +30,20 @@ Sets the template engine name that identifies this strategy. This name must be e
 ++++
 '''
 
-[cols=">25%,^25%,50%"]
+[cols=">25%,25%,50%"]
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
-|[[address]]`address`|`String`|
-+++
+|[[address]]`@address`|`String`|+++
 Sets the EB address of the verticle. Default is `knotx.knot.te`
 +++
-|[[defaultEngine]]`defaultEngine`|`String`|
-+++
+|[[defaultEngine]]`@defaultEngine`|`String`|+++
 Sets the default template engine name. This template engine will be used every time no strategy
  is defined in the Fragment Content.
 +++
-|[[engines]]`engines`|`Array of link:cheatsheets.adoc#TemplateEngineEntry[TemplateEngineEntry]`|
-+++
-List of the Template Engine Entries. Each item contains definition of new Template Engine strategy.
+|[[engines]]`@engines`|`Array of link:dataobjects.html#TemplateEngineEntry[TemplateEngineEntry]`|+++
+List of the Template Engine Entries. Each item contains definition of new Template Engine
+ strategy.
 +++
 |===
+
