--- a/handlebars/docs/asciidoc/dataobjects.adoc
+++ b/handlebars/docs/asciidoc/dataobjects.adoc
@@ -1,3 +1,5 @@
+= Cheatsheets
+
 [[HandlebarsEngineOptions]]
 == HandlebarsEngineOptions
 
@@ -6,29 +8,26 @@
 ++++
 '''
 
-[cols=">25%,^25%,50%"]
+[cols=">25%,25%,50%"]
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
-|[[cacheKeyAlgorithm]]`cacheKeyAlgorithm`|`String`|
-+++
+|[[cacheKeyAlgorithm]]`@cacheKeyAlgorithm`|`String`|+++
 Set the algorithm used to build a hash from the handlebars snippet.
  The hash is to be used as a cache key.
 
  The name should be a standard Java Security name (such as "SHA", "MD5", and so on).
 +++
-|[[cacheSize]]`cacheSize`|`Number (Long)`|
-+++
+|[[cacheSize]]`@cacheSize`|`Number (Long)`|+++
 Set the size of the cache. After reaching the max size, new elements will replace the oldest one.
 +++
-|[[endDelimiter]]`endDelimiter`|`String`|
-+++
+|[[endDelimiter]]`@endDelimiter`|`String`|+++
 Set the end delimiter for the Handlebars engine to recognize en of placeholders.
  By default, the Handlebars engine uses `}}` symbols as end delimiter.
 +++
-|[[startDelimiter]]`startDelimiter`|`String`|
-+++
+|[[startDelimiter]]`@startDelimiter`|`String`|+++
 Set the start delimiter for the Handlebars engine to recognize start of placeholders.
  By default, the Handlebars engine uses `{{` symbols as start delimiter.
 +++
 |===
+
